# toasty

./: Cargo.toml  MIGRATION_INCREMENTAL_ISSUE.md  SCHEMA_INFRASTRUCTURE_REPORT.md
crates/toasty-cli/: Cargo.toml  README.md
crates/toasty-cli/src/: executor.rs  main.rs  reset.rs  shadow.rs
crates/toasty-core/src/driver/: capability.rs
crates/toasty-driver-mongodb/src/: value.rs
crates/toasty-migrate/: Cargo.toml  MIGRATION_GUIDE.md  README.md
crates/toasty-migrate/examples/: generate_migration.rs
crates/toasty-migrate/src/: context.rs  diff.rs  generator.rs  introspect.rs  lib.rs  loader.rs  parser.rs  runner.rs  snapshot.rs  tracker.rs
crates/toasty/src/: db.rs  lib.rs  transaction.rs
docs/: migrations.md
examples/migration-test/: Cargo.toml  TEST_WORKFLOW.md  run_test.sh
examples/migration-test/entity/: Cargo.toml
examples/migration-test/entity/src/: lib.rs
examples/migration-test/migration/: .schema.json  20251122_065018_baseline.rs  20251122_070158_baseline.rs  20251122_070532_baseline.rs  20251122_070742_add_bio_proper.rs  20251122_073034_add_bio.rs  20251122_073034_baseline.rs  20251122_074459_baseline.rs  20251122_074505_add_bio.rs  20251122_074804_test.rs
examples/migration-workflow/: Cargo.toml  README.md  TESTING.md
examples/migration-workflow/entity/: Cargo.toml
examples/migration-workflow/entity/src/: lib.rs
examples/migration-workflow/entity/src/blog/: dumy.rs  mod.rs  post.rs
examples/migration-workflow/entity/src/rbac/: mod.rs  role.rs  user_role.rs
examples/migration-workflow/entity/src/user/: mod.rs  user_model.rs
examples/migration-workflow/migration/: .schema.json  20251117_012700_initial_schema.rs  20251117_012723_initial_schema.rs  20251117_012747_initial_schema.rs  20251117_013029_initial_schema_with_columns.rs  20251117_014221_initial_schema.rs  20251117_014327_initial_schema.rs  20251117_014730_baseline_schema.rs  20251117_014848_baseline_schema.rs  20251117_015833_no_duplicate_id.rs  20251117_020730_multi_file_test.rs  20251117_021908_regenerated_after_delete.rs  20251117_023121_clean_baseline.rs  20251117_023459_truly_clean_baseline.rs
examples/migration-workflow/src/: main.rs
examples/transaction-demo/: Cargo.toml
examples/transaction-demo/src/: main.rs
migrations/: .schema.json  20251122_063217_add_user_email.rs  20251122_063248_add_user_email.rs
