[package]
name = "toasty-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toasty"
path = "src/main.rs"

[features]
default = ["postgresql"]
postgresql = ["toasty-migrate/postgresql"]
sqlite = ["toasty-migrate/sqlite"]
mysql = ["toasty-migrate/mysql"]

[dependencies]
toasty-core = { workspace = true }
toasty-migrate = { workspace = true }

# CLI framework
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
chrono = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
