[package]
name = "toasty-migrate"
version = "0.1.0"
edition = "2021"

[dependencies]
toasty-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
chrono = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile = { workspace = true }
